test/testdata/functions/anonymous/missing_3_args_error.lox
var add = fun(a, b, c) {
  print a + b + c;
};

add(); // error: (anonymous)() missing 3 arguments: a, b, and c
